--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-        "src": "./web/app.py",
+        "src": "app.py",
         "use": "@vercel/python"
         }
     ],
     "routes": [
         {
         "src": "/(.*)",
-        "dest": "./web/app.py"
+        "dest": "app.py"
         }
     ]
 }
